to do: link the RF vignette to the end of Ancestry Check

--- a/vignettes/AncestryCheck.Rmd
+++ b/vignettes/AncestryCheck.Rmd
@@ -260,4 +260,8 @@ exclude_ancestry <-
 knitr::include_graphics("checkAncestry.png")
 ```
 
+
+After these steps, this .eigenvec file can be used to build a random forest.  
+The steps for this process are described in [link next vignette]. 
+
 # References
